--- a/showcase.html
+++ b/showcase.html
@@ -51,13 +51,23 @@
 		<article class="container">
 
 			<ul class="thumbnails">
-				<li class="span4"><a href="http://medhanitgrace.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://nessaxo.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://j3nniferandn1ki.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://rachelobrien.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://medhanitgrace.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://nessaxo.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://j3nniferandn1ki.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://rachelobrien.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
+			
+			<li class="span4"><a href="http://andrew92.github.io" class="thumbnail"><img src="showcase/andrew92.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://deepakkarki2402.github.io" class="thumbnail"><img src="showcase/deepakkarki2402.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://k8knights.github.io" class="thumbnail"><img src="showcase/k8knights.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://michaelapelletier.github.io" class="thumbnail"><img src="showcase/michaelapelletier.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://mtam-cs105.github.io" class="thumbnail"><img src="showcase/mtam-cs105.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://naruhina17.github.io" class="thumbnail"><img src="showcase/naruhina17.github.io.png-thumb.png" alt=""></a></li>
+			<li class="span4"><a href="http://raytrav.github.io" class="thumbnail"><img src="showcase/raytrav.github.io.png-thumb.png" alt=""></a></li>
+			
+			
 			</ul>
 		</article>
 		<footer>
