--- a/getting-started.html
+++ b/getting-started.html
@@ -56,7 +56,7 @@ You can start working with throw by using some basic starting code on jsbin.com
 </center>				
 				
 			<p></p>
-			<center><a href="http://jsbin.com/mopir/1/edit" target="_blank"><button class="btn btn-large btn-success">Go to jsbin.com and make a Throw!</button></a></center>
+			<center><a href="http://jsbin.com/jupajufeto/1/edit?html,output" target="_blank"><button class="btn btn-large btn-success">Go to jsbin.com and make a Throw!</button></a></center>
 			<p></p>
 <center>				
 To share what you have created on jsbin you can press the share button and send the link to your friends.
