--- a/images.html
+++ b/images.html
@@ -113,7 +113,7 @@ To add gravity we need to <code data-language="html">grav</code> tag.
 <img class="grav" src="http://throw-platform.github.com/img/turkey.png" />
 
 
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
  
 
 
