--- a/grav.html
+++ b/grav.html
@@ -117,7 +117,7 @@
 <span class="grav" style="background-color:orange;font-size:30pt;">GRAV</span>
 
 
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 
 
 							</textarea>
