--- a/impact.html
+++ b/impact.html
@@ -116,7 +116,7 @@ object2.innerHTML = parseInt(object2.innerHTML) +1
 <span class="grav" style="background-color:cyan;font-size:30pt;">00</span>
 <span class="grav" style="background-color:green;font-size:30pt;">00</span>
 
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 
 
 
