--- a/solid.html
+++ b/solid.html
@@ -104,7 +104,7 @@
 <span class="solid" style="background: red; font-size:30pt;position:absolute;bottom:0px">SOLID</span>
 </center>
 
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 
 							</textarea>
 						</form>
