--- a/examples/throw-basket.htm
+++ b/examples/throw-basket.htm
@@ -34,4 +34,4 @@
 <!--
 EDIT ABOVE THIS LINE
 -->
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
