--- a/examples/throw-cellphone.htm
+++ b/examples/throw-cellphone.htm
@@ -22,4 +22,4 @@ Released under the GPLv3 License
 <!--
 EDIT ABOVE THIS LINE
 -->
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
