--- a/extra.html
+++ b/extra.html
@@ -81,7 +81,7 @@
 						<form>
 							<textarea class="input" id="input">
 <span class="grav">1234</span>
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 							</textarea>
 						</form>
