--- a/showcase.html
+++ b/showcase.html
@@ -55,60 +55,55 @@
 
 			<ul class="thumbnails">
 			
-			
+<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt="">Throw-Money Example by Joseph Paul Cohen</a></li>
+<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt="">Throw Birds Example by Joseph Paul Cohen</a></li>
+<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt="">Nokia Example by Joseph Paul Cohen</a></li>
+
+				
 <li class="span4"><a href="https://output.jsbin.com/finexusule" class="thumbnail"><img src="showcase/kefuxivema.png-thumb.png" alt="">Ping Pong (2015)</a></li>						
 			
-<li class="span4"><a href="https://output.jsbin.com/leyigisoxu/1" class="thumbnail"><img src="showcase/hapasikivi.png-thumb.png" alt="">Basketball (2015)</a></li>				
+<li class="span4"><a href="https://output.jsbin.com/leyigisoxu" class="thumbnail"><img src="showcase/hapasikivi.png-thumb.png" alt="">Basketball (2015)</a></li>				
 			
-<li class="span4"><a href="https://output.jsbin.com/nukunuv/1" class="thumbnail"><img src="showcase/quworaxexa.png-thumb.png" alt="">Raining Cats and Dogs (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/nukunuv" class="thumbnail"><img src="showcase/quworaxexa.png-thumb.png" alt="">Raining Cats and Dogs (2015)</a></li>		
 
 
 
 <li class="span4"><a href="https://output.jsbin.com/vomagug" class="thumbnail"><img src="showcase/borazuwime.png-thumb.png" alt="">Minions (2015)</a></li>		
 
-<li class="span4"><a href="https://output.jsbin.com/niyiyil/1" class="thumbnail"><img src="showcase/vuredaluwo.png-thumb.png" alt="">Superman saves the Unicorns (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/niyiyil" class="thumbnail"><img src="showcase/vuredaluwo.png-thumb.png" alt="">Superman saves the Unicorns (2015)</a></li>		
 
-<li class="span4"><a href="https://output.jsbin.com/xemipos/1" class="thumbnail"><img src="showcase/gimumirogi.png-thumb.png" alt="">Save Earth from Aliens (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/xemipos" class="thumbnail"><img src="showcase/gimumirogi.png-thumb.png" alt="">Save Earth from Aliens (2015)</a></li>		
 
 		
 			
 			
 			
 			
-			<li class="span4"><a href="http://jsbin.com/vojuzu" class="thumbnail"><img src="showcase/vojuzu.png-thumb.png" alt="">CS PINBALL by Jeffery Lai (2014)</a></li>			
-			<li class="span4"><a href="http://jsbin.com/cacem/" class="thumbnail"><img src="showcase/cacem.png-thumb.png" alt="">TILT by Tony Chin (2014)</a></li>
-			<li class="span4"><a href="http://jsbin.com/zuzugu" class="thumbnail"><img src="showcase/zuzugu.png-thumb.png" alt="">Falling Stars by Zhichao (Jay) Liu (2014)</a></li>
-			<li class="span4"><a href="http://jsbin.com/pekeyi" class="thumbnail"><img src="showcase/pekeyi.png-thumb.png" alt="">Snowball Fight by Matt Brittan (2014)</a></li>
-			<li class="span4"><a href="http://jsbin.com/wuneqo" class="thumbnail"><img src="showcase/wuneqo.png-thumb.png" alt="">Football by Kevin Phan (2014)</a></li>
-			<li class="span4"><a href="http://jsbin.com/yahoxu" class="thumbnail"><img src="showcase/yahoxu.png-thumb.png" alt="">Soccer by John Saad (2014)</a></li>
-			
-			<li class="span4"><a href="http://jsbin.com/bumeni" class="thumbnail"><img src="showcase/bumeni.png-thumb.png" alt="">Basketball by Charlie Phan (2014)</a></li>
-			<li class="span4"><a href="http://jsbin.com/zijafe" class="thumbnail"><img src="showcase/zijafe.png-thumb.png" alt="">Basketball by Shamir Tazoa (2014)</a></li>
+<li class="span4"><a href="https://output.jsbin.com/xazuto" class="thumbnail"><img src="showcase/vojuzu.png-thumb.png" alt="">CS PINBALL by Jeffery Lai (2014)</a></li>			
+<li class="span4"><a href="https://output.jsbin.com/tojiyuz" class="thumbnail"><img src="showcase/cacem.png-thumb.png" alt="">TILT by Tony Chin (2014)</a></li>
+<li class="span4"><a href="https://output.jsbin.com/xodoguk" class="thumbnail"><img src="showcase/zuzugu.png-thumb.png" alt="">Falling Stars by Zhichao (Jay) Liu (2014)</a></li>
 
-	
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt="">Throw-Money Example by Joseph Paul Cohen</a></li>
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt="">Throw Birds Example by Joseph Paul Cohen</a></li>
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt="">Nokia Example by Joseph Paul Cohen</a></li>
+<li class="span4"><a href="https://output.jsbin.com/yiwihin" class="thumbnail"><img src="showcase/pekeyi.png-thumb.png" alt="">Snowball Fight by Matt Brittan (2014)</a></li>
+<li class="span4"><a href="https://output.jsbin.com/fanurec" class="thumbnail"><img src="showcase/wuneqo.png-thumb.png" alt="">Football by Kevin Phan (2014)</a></li>
+<li class="span4"><a href="https://output.jsbin.com/bocugix" class="thumbnail"><img src="showcase/yahoxu.png-thumb.png" alt="">Soccer by John Saad (2014)</a></li>
+
+<li class="span4"><a href="http://jsbin.com/bumeni" class="thumbnail"><img src="showcase/bumeni.png-thumb.png" alt="">Basketball by Charlie Phan (2014)</a></li>
+<li class="span4"><a href="http://jsbin.com/zijafe" class="thumbnail"><img src="showcase/zijafe.png-thumb.png" alt="">Basketball by Shamir Tazoa (2014)</a></li>
+<li class="span4"><a href="http://medhanitgrace.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt="">Harry Potter</a></li>
+
+<li class="span4"><a href="http://nessaxo.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://j3nniferandn1ki.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://rachelobrien.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
 			
-			
-			
-			
-			
-			
-			
-				<li class="span4"><a href="http://medhanitgrace.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt="">Harry Potter</a></li>
-				<li class="span4"><a href="http://nessaxo.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://j3nniferandn1ki.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://rachelobrien.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
-			
-			<li class="span4"><a href="http://andrew92.github.io" class="thumbnail"><img src="showcase/andrew92.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://deepakkarki2402.github.io" class="thumbnail"><img src="showcase/deepakkarki2402.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://k8knights.github.io" class="thumbnail"><img src="showcase/k8knights.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://michaelapelletier.github.io" class="thumbnail"><img src="showcase/michaelapelletier.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://mtam-cs105.github.io" class="thumbnail"><img src="showcase/mtam-cs105.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://naruhina17.github.io" class="thumbnail"><img src="showcase/naruhina17.github.io.png-thumb.png" alt=""></a></li>
-			<li class="span4"><a href="http://raytrav.github.io" class="thumbnail"><img src="showcase/raytrav.github.io.png-thumb.png" alt=""></a></li>
-			
+<li class="span4"><a href="http://andrew92.github.io" class="thumbnail"><img src="showcase/andrew92.github.io.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://deepakkarki2402.github.io" class="thumbnail"><img src="showcase/deepakkarki2402.github.io.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://k8knights.github.io" class="thumbnail"><img src="showcase/k8knights.github.io.png-thumb.png" alt=""></a></li>
+
+<li class="span4"><a href="http://michaelapelletier.github.io" class="thumbnail"><img src="showcase/michaelapelletier.github.io.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://mtam-cs105.github.io" class="thumbnail"><img src="showcase/mtam-cs105.github.io.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://naruhina17.github.io" class="thumbnail"><img src="showcase/naruhina17.github.io.png-thumb.png" alt=""></a></li>
+<li class="span4"><a href="http://raytrav.github.io" class="thumbnail"><img src="showcase/raytrav.github.io.png-thumb.png" alt=""></a></li>
+
 		
 			
 			
